--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -23,7 +23,8 @@
       "baseUrl": ".",
       "paths": {
         "@/*": ["./src/*"],
-        "@shared/*": ["../shared/*"]
+        "@shared/*": ["../shared/*"],
+        "@package.json": ["./package.json"]
       }
     }
   }
