--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,10 @@ server {
     proxy_send_timeout 86400;
     proxy_buffering off;
 
+    location / {
+        proxy_pass http://frontend:3000/;
+    }
+
     location /api/ {
         proxy_pass http://backend:5000/;
     }
