--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,41 @@
 name: zenn
 
 services:
+  frontend:
+    container_name: zenn-frontend
+
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
+      additional_contexts:
+        - shared=./shared
+    restart: unless-stopped
+
+    networks:
+      - proxy
+
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+      - ./shared:/shared
+      - /shared/node_modules
+
+    healthcheck:
+      test:
+        [
+          "CMD",
+          "bun",
+          "-e",
+          "fetch('http://localhost:3000').then((r) => {if (r.status !== 200) throw new Error(r.status)})",
+        ]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 10s
+
+    depends_on:
+      backend:
+        condition: service_healthy
   backend:
     container_name: zenn-backend
     build:
@@ -21,6 +56,7 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
+      start_period: 10s
 
     volumes:
       - ./backend:/app
@@ -54,6 +90,8 @@ services:
 
     depends_on:
       backend:
+        condition: service_healthy
+      frontend:
         condition: service_healthy
 
   db:
